# blog_api

./: .gitignore  Cargo.toml  README.md  errors.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260330_183859_create_table_users.rs  m20260330_183909_create_table_posts.rs
src/: errors.rs  main.rs
src/entities/: posts.rs  users.rs
src/handlers/: post_handler.rs  user_handler.rs
src/repository/: post_repository.rs  user_repository.rs
src/services/: post_service.rs  user_service.rs
