[package]
name = "blog_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "util"] } 
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
